# example-bevy

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
assets/ldtk/: run_and_jump.ldtk  tile-based-game.ldtk
examples/: 2d_setup.rs  2d_shooting.rs  3d_scene.rs  alien_cake_addict.rs  app_state.rs  audio.rs  breakout.rs  catch_game.rs  click.rs  click_game.rs  collision.rs  flappy_bird.rs  frogger.rs  frogger_game.rs  run_and_jump.rs  scoreboard.rs  setup.rs  spritesheet.rs  timing.rs  timing_game.rs  ui.rs  velocity.rs
examples/2d_setup/: gameover.rs  ingame.rs  main.rs  mainmenu.rs  pause.rs
examples/bevy/: text2d.rs
examples/doodle_jump/: main.rs  stage_1.json
examples/helpers/: camera.rs  player.rs
examples/run_and_jump/: main.rs  map.json  stage_1.json  stage_2.json  stage_3.json  stage_4.json  stage_5.json
page/: index.html  main.js
